extends Button
@onready var speed: SpinBox = $"../VBoxContainer/Speed/SpinBox"
@onready var acceleration: SpinBox = $"../VBoxContainer/Acceleration/SpinBox"

@onready var pos1x: SpinBox = $"../VBoxContainer/Pos1x/SpinBox"
@onready var pos1y: SpinBox = $"../VBoxContainer/Pos1y/SpinBox"
@onready var out1x: SpinBox = $"../VBoxContainer/Out1x/SpinBox"
@onready var out1y: SpinBox = $"../VBoxContainer/Out1y/SpinBox"
@onready var pos2x: SpinBox = $"../VBoxContainer/Pos2x/SpinBox"
@onready var pos2y: SpinBox = $"../VBoxContainer/Pos2y/SpinBox"
@onready var in2x: SpinBox = $"../VBoxContainer/In2x/SpinBox"
@onready var in2y: SpinBox = $"../VBoxContainer/In2y/SpinBox"
@onready var out2x: SpinBox = $"../VBoxContainer/Out2x/SpinBox"
@onready var out2y: SpinBox = $"../VBoxContainer/Out2y/SpinBox"
@onready var pos3x: SpinBox = $"../VBoxContainer/Pos3x/SpinBox"
@onready var pos3y: SpinBox = $"../VBoxContainer/Pos3y/SpinBox"
@onready var in3x: SpinBox = $"../VBoxContainer/In3x/SpinBox"
@onready var in3y: SpinBox = $"../VBoxContainer/In3y/SpinBox"
