extends Button
@onready var radius: SpinBox = $"../VBoxContainer/Radius/SpinBox"
@onready var angle: SpinBox = $"../VBoxContainer/Angle/SpinBox"
@onready var angular_speed: SpinBox = $"../VBoxContainer/AngSpeed/SpinBox"
@onready var angular_acceleration: SpinBox = $"../VBoxContainer/AngAccel/SpinBox"
@onready var ending_phase: SpinBox = $"../VBoxContainer/EndingPhase/SpinBox"
