extends Button
@onready var speed: SpinBox = $"../VBoxContainer/Speed/SpeedSpinBox"
@onready var direction: SpinBox = $"../VBoxContainer/Direction/DirectionSpinBox"
@onready var acceleration: SpinBox = $"../VBoxContainer/Acceleration/SpeedSpinBox"
@onready var ending_phase: SpinBox = $"../VBoxContainer/EndingPhase/SpeedSpinBox"
