extends Button
@onready var vx: SpinBox = $"../VBoxContainer/VelocityX/SpinBox"
@onready var vy: SpinBox = $"../VBoxContainer/VelocityY/SpinBox"
@onready var ax: SpinBox = $"../VBoxContainer/AccelerationX/SpinBox"
@onready var ay: SpinBox = $"../VBoxContainer/AccelerationY/SpinBox"
@onready var ending_phase: SpinBox = $"../VBoxContainer/EndingPhase/SpinBox"
